# pinot

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.git  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  pinot.spec  pinot.spec.in
doc/: Makefile.am  Makefile.in  faq.html  pinotrc.sample.in
doc/man/: Makefile.am  Makefile.in  pinot.1  pinotrc.5
doc/syntax/: Makefile.am  Makefile.in  asm.pinotrc  awk.pinotrc  c.pinotrc  changelog.pinotrc  cmake.pinotrc  css.pinotrc  debian.pinotrc  elisp.pinotrc  erb.pinotrc  fortran.pinotrc  gentoo.pinotrc  go.pinotrc  groff.pinotrc  guile.pinotrc  html.pinotrc  java.pinotrc  javascript.pinotrc  json.pinotrc  lua.pinotrc  makefile.pinotrc  man.pinotrc  mgp.pinotrc  mutt.pinotrc  objc.pinotrc  ocaml.pinotrc  patch.pinotrc  perl.pinotrc  php.pinotrc  pinotrc.pinotrc  postgresql.pinotrc  pov.pinotrc  python.pinotrc  ruby.pinotrc  sh.pinotrc  spec.pinotrc  tcl.pinotrc  templatetoolkit.pinotrc  tex.pinotrc  (+2 more)
doc/texinfo/: Makefile.am  nano.texi  pinot.texi
libtermkey-0.17/: Makefile.am
po/: POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  eo.gmo  eo.po  es.gmo  es.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ms.gmo  ms.po  nb.gmo  nb.po  nl.gmo  nl.po  nn.gmo  nn.po  pl.gmo  (+23 more)
src/: EventQueue.cpp  EventQueue.h  History.cpp  History.h  Keyboard.cpp  Keyboard.h  Makefile.am  Makefile.in  OpenFile.cpp  OpenFile.h  PinotString.cpp  PinotString.h  String.cpp  String.h  browser.c  browser.cpp  chars.c  chars.cpp  color.cpp  cpputil.cpp  cpputil.h  cut.c  cut.cpp  files.c  files.cpp  global.c  global.cpp  help.c  help.cpp  macros.h  move.c  move.cpp  nano.c  nano.h  pinot.c  pinot.cpp  pinot.h  prompt.c  prompt.cpp  proto.h  (+13 more)
