## $Id: Makefile.am 4227 2008-03-15 23:14:34Z astyanax $
AUTOMAKE_OPTIONS = gnu no-dependencies

SUBDIRS = doc m4 po src

EXTRA_DIST = ABOUT-NLS AUTHORS.nano BUGS COPYING COPYING.DOC \
		INSTALL README README.SVN \
		THANKS TODO UPGRADE config.rpath install-sh missing \
		mkinstalldirs pinot.spec

ACLOCAL_AMFLAGS = -I m4
