## $Id: Makefile.am 4227 2008-03-15 23:14:34Z astyanax $
AUTOMAKE_OPTIONS = gnu no-dependencies

SUBDIRS = doc m4 po libtermkey-0.17 src

EXTRA_DIST = \
	ABOUT-NLS AUTHORS.nano COPYING COPYING.DOC \
	INSTALL README README.git THANKS \
	config.rpath install-sh missing mkinstalldirs pinot.spec

ACLOCAL_AMFLAGS = -I m4
