AUTOMAKE_OPTIONS = gnu no-dependencies

AM_CPPFLAGS = -I$(top_builddir)/libtermkey-0.17

SUBDIRS = doc m4 po libtermkey-0.17 src

EXTRA_DIST = \
	ABOUT-NLS AUTHORS.nano COPYING COPYING.DOC \
	INSTALL README README.git THANKS \
	config.rpath install-sh missing mkinstalldirs pinot.spec

ACLOCAL_AMFLAGS = -I m4
