pkgdata_DATA =	asm.pinotrc \
		awk.pinotrc \
		cmake.pinotrc \
		c.pinotrc \
		css.pinotrc \
		debian.pinotrc \
		fortran.pinotrc \
		gentoo.pinotrc \
		groff.pinotrc \
		html.pinotrc \
		java.pinotrc \
		lua.pinotrc \
		makefile.pinotrc \
		man.pinotrc \
		mgp.pinotrc \
		mutt.pinotrc \
		pinotrc.pinotrc \
		objc.pinotrc \
		ocaml.pinotrc \
		patch.pinotrc \
		perl.pinotrc \
		php.pinotrc \
		pov.pinotrc \
		python.pinotrc \
		ruby.pinotrc \
		sh.pinotrc \
		spec.pinotrc \
		tcl.pinotrc \
		tex.pinotrc \
		xml.pinotrc

EXTRA_DIST = $(pkgdata_DATA)
