pkgdata_DATA = \
		asm.pinotrc \
		awk.pinotrc \
		cmake.pinotrc \
		c.pinotrc \
		css.pinotrc \
		debian.pinotrc \
		elisp.pinotrc \
		fortran.pinotrc \
		gentoo.pinotrc \
		go.pinotrc \
		groff.pinotrc \
		guile.pinotrc \
		html.pinotrc \
		java.pinotrc \
		javascript.pinotrc \
		json.pinotrc \
		lua.pinotrc \
		makefile.pinotrc \
		man.pinotrc \
		mgp.pinotrc \
		mutt.pinotrc \
		objc.pinotrc \
		ocaml.pinotrc \
		patch.pinotrc \
		perl.pinotrc \
		php.pinotrc \
		pinotrc.pinotrc \
		postgresql.pinotrc \
		pov.pinotrc \
		python.pinotrc \
		ruby.pinotrc \
		sh.pinotrc \
		spec.pinotrc \
		tcl.pinotrc \
		tex.pinotrc \
		texinfo.pinotrc \
		xml.pinotrc

EXTRA_DIST = $(pkgdata_DATA)
